--- a/src/lang/fr.yml
+++ b/src/lang/fr.yml
@@ -1,3 +1,11 @@
+# If you're unfamiliar with YAML, this comment will explain the syntax you can find in this file:
+#    "-" denotes a list item;
+#    ">-" and "|-" both allow you to break up text into several lines. The difference being "|-" keeps your linebreaks,
+#         while ">-" only adds a linebreak if you have an empty line in the text (see Death Marker entry for example)
+#
+# Generally you can just replace the text without having to worry about that.
+# However using an editor that can highlight the syntax could still be helpful.
+
 healthEstimate:
     core:
         onlyGM:
@@ -5,10 +13,18 @@ healthEstimate:
             hint: Si activé, l''estimation n''est visible que pour le MJ.
         onlyNPCs:
             name: Que pour les PNJs
-            hint: Si activé, l'estimation n'est visible que pour les PNJs, mais pas pour les PJs.
+            hint: Si activé, l'estimation n'est visible que pour les PNJs, mais pas pour les PJs. Cette configuration ne s'applique qu'aux Joueurs.
+        onlyPCs:
+            name: PJ Seulement
+            hint: Si activé, l'estimation n'est visible que pour les PJs, mais pas pour les PNJs. Cette configuration ne s'applique qu'aux Joueurs.
         stateNames:
             name: Etapes
-            hint: Série de descriptions présentées aux joueurs, classées du pire au meilleur état de santé possible.
+            hint: >-
+                Série de descriptions présentées aux joueurs, classées du pire au meilleur état de santé possible.
+           
+                Le nombre de descriptions possible n''est pas limité. Le module ajuste propotionelement le pourcentage de santé associé en fonction de ce nombre de choix possibles. 
+
+                S''il y a besoin d'une plage de pourcentage plus grande pour l''une des descriptions, copié simplement plusieurs fois ce nom dans la liste.
             default:
                 - Inconscient
                 - Presque mort
@@ -37,6 +53,14 @@ healthEstimate:
                 Pour obtenir l'emplacement du symbole personnalisé, sélectionnez un
                 token marqué avec celui-ci, ouvrez la console et entrez
                 "canvas.tokens.controlled[0].data.overlayEffect"
+        NPCsJustDie:
+            name: PNJs meurt immédiatement
+            hint: >-
+                Avec ce réglage activé, la description la plus basse en mode normal ie ''Inconscient'' ne sera pas affiché pour les PNJs.
+                A la place, ceux-ci seront marqués comme ''Mort''.
+        perfectionism:
+            name: Perfectioniste
+            hint: Montre la description la meilleure uniquement si aucun dégat n'a été subit.
         addTemp:
             name: Ajout de PV Temporaraires
             hint: >-
@@ -46,20 +70,50 @@ healthEstimate:
                 Par exemple, si le paramètre est activé, le token recevant le point de
                 vie temporaire aura l'air "plus sain " à moins qu'il ne soit déjà au
                 maximum de sa santé.
-        fontSize:
-            name: Taille de la Police
-            hint: Accepte toute propriété valable pour CSS font-size
-        color:
-            name: Couleur
-            hint: >-
-                Est ce que les descriptions doivent-elles être mises en surbrillance via
-                un dégradé de couleurs allant du vert au rouge correspondant à l'état de
-                santé actuel ?
-        smoothGradient:
-            name: Dégradé progressif
-            hint: >-
-                Avec ce réglage, la couleur ne changera que lorsque la description
-                suivante sera atteinte. Un pourcentage de santé sera indiqué.
+        breakOnZeroMaxHP:
+            name: Cacher les token avec 0 Hp Max
+            hint: Utile pour les objets ayant un token
+        menuSettings:
+            fontSize:
+                name: Taille de la Police
+                hint: Accepte toute propriété valable pour CSS font-size
+            useColor:
+                name: Couleur
+                hint: >-
+                    Est ce que les descriptions doivent-elles être mises en surbrillance via
+                    un dégradé de couleurs allant du vert au rouge correspondant à l'état de
+                    santé actuel ?
+            smoothGradient:
+                name: Dégradé progressif
+                hint: >-
+                    Avec ce réglage, la couleur ne changera que lorsque la description
+                    suivante sera atteinte. Un pourcentage de santé sera indiqué.
+            deadColor:
+                name: Couleur pour les tokens morts
+            outline:
+                name:       Contour
+                darken:     Plus sombre
+                brighten:   Plus clair
+            position:
+                name: Position
+                top:    Haut
+                middle: Milieu
+                bottom: Bas
+            positionAdjustment:
+                name:   Ajustement de la position
+                hint:   >-
+                        La position est relative à la frame. Le nombre vous permet d'ajuste la position relative par rapport à sa position normale. 
+                        Un nombre positif pousse le texte vers le bas, negatif vers le haut. La valeur par défaut est -1 est correspond à
+                        "1 ligne en dessous de la position initiale".
+    dnd5e:
+        vehicleNames:
+            hint: Descriptions shown for vehicles if "Use Vehicle Threshold" is off
+            default:     #There are no official descriptions for the states of the vehicles, so feel free to go with what you feel will work best in your language
+                - Épave
+                - En Panne
+                - Endommagé
+                - Rayés
+                - Intacte
     PF1:
         showExtra:
             name: Hors-combat & Mourant
@@ -90,20 +144,20 @@ healthEstimate:
             hint: Le nombre d'étapes est limité à 3, classées du pire au meilleur
             default:
                 - Naufragé
-                - cassé
-                - pleinement fonctionnel
+                - Cassé
+                - Pleinement fonctionnel
         vehicleNames:
             name: Étapes du véhicule
             hint: >-
                 Descriptions indiquées pour les vaisseaux (toujours) et les véhicules
-                (si"Seuil d'utilisation des véhicules" est désactivé)
+                (si "Seuil d'utilisation des véhicules" est désactivé)
             default:
-                - Épaves
+                - Épave
                 - En feu
                 - Fumant
-                - Endommagées
-                - Rayées
-                - Intactes
+                - Endommagé
+                - Rayé
+                - Intacte
         addStamina:
             name: Ajout de l'endurance
             hint: Avec ce réglage l'Endurance sera ajoutée au PV pour les calculs.
